<resources>
    <string name="app_name">Opac Unisza</string>
    <string name="next_text">Start</string>
    <string name="left_string">Left String</string>
    <string name="pattern">Pattern</string>
    <string name="keyword">Keyword</string>
    <string name="title">Title</string>
    <string name="subject">Subject</string>
    <string name="series">Series</string>
    <string name="isbn">ISBN/ISSN</string>
    <string name="author">Name/Author</string>ss
    <string name="publication">Publication</string>
    <string name="call_no">Call Number</string>
    <string name="search_type">Search Type</string>
    <string name="access_point">Access Point</string>
    <string name="search_text">Search Text</string>
    <string name="search">Search</string>
    <string name="label_isbn">ISBN Number :</string>
    <string name="label_call_no">Call Number</string>
    <string name="label_author">Author :</string>
    <string name="label_title">Title :</string>
    <string name="label_edition">Edition :</string>
    <string name="label_imprint">Imprint :</string>
    <string name="label_desc">Book Description :</string>
    <string name="label_notes">Notes :</string>
    <string name="label_biblio">Bibliography :</string>
    <string name="label_subject">Subject Topic :</string>
    <string name="label_other_author">Other Author :</string>
    <string name="label_entry_title">Entry Title :</string>
    <string name="access_text">Accession</string>
    <string name="no_access_text">No Accession</string>
    <string name="acquasition_text">Acquisition</string>
    <string name="label_campus">Campus :</string>
    <string name="label_location">Location :</string>
    <string name="label_smd">SMD :</string>
    <string name="label_category">Category :</string>
    <string name="label_status">Status :</string>
    <string name="label_due_date">Due Date :</string>
    <string name="label_due_time">Due Time :</string>
    <string name="label_order_date">Order Date :</string>
    <string name="label_vendor">Vendor :</string>
    <string name="label_sets">Sets :</string>
    <string name="label_copies">Copies :</string>
    <string name="label_feedback">Feedback :</string>
    <string name="label_received">Received :</string>
</resources>
