<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/accessionLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:cardview="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:id="@+id/card_accession"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#cdcdcd"
        android:layout_margin="5dp"
        cardview:cardCornerRadius="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:weightSum="1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="0.54"
                android:id="@+id/callNoLabel"
                android:textStyle="bold"
                android:text="@string/label_call_no"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/callNotxt"
                android:textSize="16dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:textColor="#000" />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="0.54"
                android:id="@+id/campusLabel"
                android:textStyle="bold"
                android:text="@string/label_campus"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/campustxt"
                android:textSize="16dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:textColor="#000"/>


        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="0.54"
                android:id="@+id/locationLabel"
                android:textStyle="bold"
                android:text="@string/label_location"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/locationtxt"
                android:textSize="16dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:textColor="#000"/>


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="0.54"
                android:id="@+id/smdLabel"
                android:textStyle="bold"
                android:text="@string/label_smd"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/smdtxt"
                android:textSize="16dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:textColor="#000"/>


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="0.54"
                android:id="@+id/categoryLabel"
                android:textStyle="bold"
                android:text="@string/label_category"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/categorytxt"
                android:textSize="16dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:textColor="#000"/>


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="0.54"
                android:id="@+id/statusLabel"
                android:textStyle="bold"
                android:text="@string/label_status"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/statustxt"
                android:textSize="16dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:textColor="#000"/>


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="0.54"
                android:id="@+id/dueDateLabel"
                android:textStyle="bold"
                android:text="@string/label_due_date"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/dueDatetxt"
                android:textSize="16dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:textColor="#000"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="0.54"
                android:id="@+id/dueTimeLabel"
                android:textStyle="bold"
                android:text="@string/label_due_time"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/dueTimetxt"
                android:textSize="16dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:textColor="#000"/>

        </LinearLayout>
    </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>