<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context=".AcquisitionActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/AppTheme.AppBarOverlay"
        />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:weightSum="1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|bottom"
                android:layout_marginTop="11dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="0.54"
                    android:id="@+id/orderLabel"
                    android:textStyle="bold"
                    android:text="@string/label_order_date"
                    android:textColor="#000"/>

                <TextView
                    android:id="@+id/ordertxt"
                    android:textSize="16dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:textColor="#000" />


            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|bottom"
                android:layout_marginTop="11dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="0.54"
                    android:id="@+id/vendorLabel"
                    android:textStyle="bold"
                    android:text="@string/label_vendor"
                    android:textColor="#000"/>

                <TextView
                    android:id="@+id/vendortxt"
                    android:textSize="16dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:textColor="#000"/>


            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|bottom"
                android:layout_marginTop="11dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="0.54"
                    android:id="@+id/statusLabel"
                    android:textStyle="bold"
                    android:text="@string/label_status"
                    android:textColor="#000"/>

                <TextView
                    android:id="@+id/statustxt"
                    android:textSize="16dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:textColor="#000"/>


            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|bottom"
                android:layout_marginTop="11dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="0.54"
                    android:id="@+id/setLabel"
                    android:textStyle="bold"
                    android:text="@string/label_sets"
                    android:textColor="#000"/>

                <TextView
                    android:id="@+id/settxt"
                    android:textSize="16dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:textColor="#000"/>


            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|bottom"
                android:layout_marginTop="11dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="0.54"
                    android:id="@+id/receivedLabel"
                    android:textStyle="bold"
                    android:text="@string/label_received"
                    android:textColor="#000"/>

                <TextView
                    android:id="@+id/receivedtxt"
                    android:textSize="16dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:textColor="#000"/>


            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|bottom"
                android:layout_marginTop="11dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="0.54"
                    android:id="@+id/copiesLabel"
                    android:textStyle="bold"
                    android:text="@string/label_copies"
                    android:textColor="#000"/>

                <TextView
                    android:id="@+id/copiestxt"
                    android:textSize="16dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:textColor="#000"/>


            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|bottom"
                android:layout_marginTop="11dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="0.54"
                    android:id="@+id/feedbackLabel"
                    android:textStyle="bold"
                    android:text="@string/label_feedback"
                    android:textColor="#000"/>

                <TextView
                    android:id="@+id/feedbacktxt"
                    android:textSize="16dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:textColor="#000"/>

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
    </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>